--- a/main.html
+++ b/main.html
@@ -7,9 +7,48 @@
 </head>
 
 <body>
-	 dfsfg
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <form>
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" placeholder="Name" required>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" placeholder="Email" required>
+
+    <label>Gender:</label>
+    <div class="gender-options">
+      <label><input type="radio" id="gender_m" name="gender" value="male" required> Male</label>
+      <label><input type="radio" id="gender_f" name="gender" value="female" required> Female</label>
+    </div>
+
+    <label for="cars">Car Brands:</label>
+    <select id="cars" name="cars" required>
+      <option value="" disabled selected>--Please choose an option--</option>
+      <option value="bmw">BMW</option>
+      <option value="audi">Audi</option>
+      <option value="tesla">Tesla</option>
+      <option value="toyota">Toyota</option>
+    </select>
+
+    <label for="age">Age:</label>
+    <input type="number" id="age" name="age" placeholder="Age" required>
+
+    <label for="dob">Date of Birth:</label>
+    <input type="date" id="dob" name="dob" required>
+
+    <label for="tel">Phone Number:</label>
+    <input type="tel" id="tel" name="tel" placeholder="xxx-xxx-xxxx" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
+
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" placeholder="Password" required>
+
+    <div class="checkbox">
+      <input type="checkbox" id="tos" name="tos" required>
+      <label for="tos" style="margin-left: 5px;">I agree to the TOS</label>
+    </div>
+
+    <button type="submit">Sign Up</button>
+  </form>
 
 </body>
 
